// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no options 1`] = `
"globalThis.process = globalThis.process ?? {}
globalThis.process.env = globalThis.process.env ?? {}
globalThis.process.env['test'] = {}
for (const [k, v] of Object.entries({})) {
	globalThis.process.env['test'][k] = v
}


function foobar() {
	console.log('foobar');
}

foobar();
"
`;

exports[`options 1`] = `
"globalThis.process = globalThis.process ?? {}
globalThis.process.env = globalThis.process.env ?? {}
globalThis.process.env['test'] = {}
for (const [k, v] of Object.entries({\\"foo\\":\\"bar\\"})) {
	globalThis.process.env['test'][k] = v
}


function foobar() {
	console.log('foobar');
}

foobar();
"
`;
